force-app/main/default/objects/Order_Internal_SLA__c/Order_Internal_SLA__c.object-meta.xml
<CustomObject>
    <description>Rastreia períodos de pausa/standby internos no processo de Assistência Técnica (AT).</description>
    <label>SLA Interno</label>
    <nameField>
        <displayFormat>SLA-{0000}</displayFormat>
        <label>SLA Interno</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLAs Internos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>