force-app/main/default/objects/Order_Internal_SLA__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Dias de duração entre a data de início e data de fim do período registado.</description>
    <formula>EndDate__c  -  StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duração</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>