force-app/main/default/objects/Order_Internal_SLA__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Relação master-detail entre o Service_Internal_SLA__c e o Order, permite associar múltiplos registos de controlo dos períodos internos de SLA a uma única AT</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>SLAs Internos</relationshipLabel>
    <relationshipName>SLAs_Internos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>