force-app/main/default/objects/Order_Internal_SLA__c/fields/Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Responsibility__c</fullName>
    <description>Identifica a entidade responsável pelo período SLA interno associado a AT</description>
    <label>Responsabilidade</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Equipa Central</fullName>
            </value>
            <value>
                <fullName>Fornecedor</fullName>
            </value>
            <value>
                <fullName>Instalador</fullName>
            </value>
            <value>
                <fullName>Loja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>