force-app/main/default/objects/Order_Internal_SLA__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Data Inicio</label>
    <type>Date</type>
</CustomField>