force-app/main/default/objects/Order_Internal_SLA__c/validationRules/DataFimMaiorQueDataInicio.validationRule-meta.xml
<ValidationRule>
    <fullName>DataFimMaiorQueDataInicio</fullName>
    <active>true</active>
    <errorConditionFormula>EndDate__c &lt; StartDate__c</errorConditionFormula>
    <errorMessage>A Data Fim deve ser posterior a Data de Início.</errorMessage>
</ValidationRule>