force-app/main/default/objects/Order_Internal_SLA__c/validationRules/DataFimPosteriorDataFimAT.validationRule-meta.xml
<ValidationRule>
    <fullName>DataFimPosteriorDataFimAT</fullName>
    <active>true</active>
    <description>A Data Fim do SLA não pode ser posterior a Data Fim da AT</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Order__r.ActivatedDate)),
  OR(
    EndDate__c &gt; DATEVALUE(Order__r.ActivatedDate),
    StartDate__c &gt; DATEVALUE(Order__r.ActivatedDate)
  )
)</errorConditionFormula>
    <errorMessage>A Data Início / Data Fim do SLA não pode ser posterior à Data de conclusão da AT</errorMessage>
</ValidationRule>