force-app/main/default/objects/Order_Internal_SLA__c/validationRules/DataInicioAnteriorAT.validationRule-meta.xml
<ValidationRule>
    <fullName>DataInicioAnteriorAT</fullName>
    <active>true</active>
    <description>Data Inicio do SLA é inferior a Data Inicio da AT</description>
    <errorConditionFormula>StartDate__c  &lt;  Order__r.EffectiveDate</errorConditionFormula>
    <errorMessage>A Data Início do SLA não pode ser anterior a Data Início da AT</errorMessage>
</ValidationRule>